--- a/css/style.css
+++ b/css/style.css
@@ -754,8 +754,282 @@ section {
 }
   
 }
+/* ------------------------------------------------------------------- */
+
+@media (max-width: 320px) and (max-height: 900px) {
+  html {
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+  }
+
+  body {
+    height: 100vh;
+    overflow-y: scroll;
+  }
+
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100vw;
+    padding: 8px 16px;
+  }
+
+  section {
+    height: 100vh;
+    scroll-snap-align: start;
+  }
+
+  .book {
+    height: auto;
+  }
+
+  @keyframes bouncePop {
+    0% {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    30% {
+      transform: scale(1.1);
+      opacity: 1;
+    }
+    50% {
+      transform: scale(0.8);
+    }
+    70% {
+      transform: scale(1.05);
+    }
+    85% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  .main-text {
+    font-size: 45px;
+    line-height: 50px;
+    margin-left: 8px;
+    margin-top: 15px;
+    text-align: left;
+    animation: bouncePop 1s ease-out forwards;
+  }
+
+  .menu {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    padding: 8px;
+    position: absolute;
+    top: 50px;
+    right: 15px;
+  }
+
+  .menu a {
+    font-size: 16px;
+    border-bottom: 1px solid white;
+  }
+
+  #menu-toggle:checked + .menu-icon + .menu {
+    display: flex;
+  }
+
+  .menu-icon {
+    display: flex;
+  }
+
+  .name {
+    font-size: 16px;
+  }
+
+  .skills-title, .work-title, .contact-title {
+    font-size: 32px;
+  }
+
+  .skills-container {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .skills-left,
+  .skills-right {
+    flex: none;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .skills-right {
+    position: relative;
+    top: -40px;
+  }
+
+  .item_container {
+    width: 160px;
+    height: 160px;
+    gap: 15px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 150px;
+  }
+
+  .divider {
+    opacity: 0;
+    width: 60vw;
+    position: absolute;
+    top: 350px;
+    height: 2px;
+    animation: showselfmob 1s ease-in-out 1s forwards;
+  }
+
+  @keyframes showselfmob {
+    0% {
+      opacity: 0;
+      width: 30vw;
+    }
+    100% {
+      opacity: 1;
+      width: 60vw;
+    }
+  }
+
+  .item1 img,
+  .item2 img,
+  .item3 img,
+  .item4 img {
+    height: 40px;
+    width: 40px;
+  }
+
+  .item {
+    height: 160px;
+    width: 160px;
+    top: 80px;
+  }
+  .slider-list{
+    position: relative;
+    top: 40px;
+  }
+
+  .slider-item-title {
+    color: black;
+    font-size: 20px;
+    font-family: 'Monomaniac One', sans-serif;
+  }
+
+  .slider-item-img {
+    height: 60px;
+    width: 60px;
+  }
+
+  .slider-item-imgsrc {
+    height: 60px;
+    width: 60px;
+    position: relative;
+    left: -8px;
+  }
+
+  .slider-item-imgsrc:hover {
+    transform: scale(1.1);
+  }
+
+  .slider-item-desc {
+    height: 40px;
+    width: 90px;
+    font-size: 13px;
+    color: #000000;
+    justify-self: center;
+  }
+
+  .work-slider {
+    height: 260px;
+    position: relative;
+    top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-title {
+    text-align: center;
+    margin-bottom: 8px;
+  }
+
+  .about {
+    font-size: 18px;
+    font-family: 'Monomaniac One', sans-serif;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+
+  .icon {
+    height: 40px;
+    width: 40px;
+  }
+
+  .icon img {
+    height: 32px;
+    width: 32px;
+  }
+
+  .icon-container {
+    height: 80px;
+    width: 160px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contact-sector {
+    height: 160px;
+    width: 250px;
+  }
+}
+
+/* -------------------------------------------------------------------- */
 
 
+@media (max-width: 768px) {
+
+
+
+  
+  .skills-right {
+    flex: none;
+    display: flex;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 150px;
+    
+  }
+  
+
+  .item_container {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    top: 130px;
+    left: -20px;
+    
+  }
+  .item_container img{
+    height: 60px;
+    width: 60px;
+  }
+
+
+}
+/* --------------------------------------------------------------------- */
 @media (min-width: 600px) and (max-width: 900px) {
   .main-text {
     font-size: 90px;
