--- a/css/style.css
+++ b/css/style.css
@@ -1000,31 +1000,61 @@ section {
 
 
   
-  .skills-right {
-    flex: none;
-    display: flex;
-    width: 100%;
-    text-align: center;
-    font-size: 24px;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 150px;
-    
+  .main-text {
+    font-size: 90px;
+    line-height: 120px;
+    margin-left: -30px;
+    margin-top: 0;
+    text-align: left;
   }
-  
+
+  .header {
+    font-size: 20px;
+    padding: 15px 25px;
+  }
+
+  .menu a {
+    margin: 0 12px;
+    font-size: 20px;
+  }
+
+  .name {
+    font-size: 20px;
+  }
+
+  .skills-title {
+    font-size: 50px;
+  }
+
+  .divider {
+    height: 50%;
+  }
+
+  .skills-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .skills-left, .skills-right {
+    flex: 1;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .skills-right {
+    font-size: 28px;
+    padding: 10px 0;
+  }
 
   .item_container {
-    width: 200px;
-    height: 200px;
-    position: relative;
-    top: 130px;
-    left: -20px;
-    
-  }
-  .item_container img{
-    height: 60px;
-    width: 60px;
+    width: 280px;
+    height: 280px;
   }
 
 
@@ -1088,3 +1118,66 @@ section {
     height: 280px;
   }
 }
+/* @media (min-width: 1024px) {
+  .main-text {
+    font-family: 'Monoton', cursive;
+    font-size: 145px;
+    text-align: left;
+    margin-left: 20px;
+    line-height: 150px;
+    margin-top: -50px;
+    animation: opacitymain 0.8s ease-in-out forwards;
+  }
+  .skills-title {
+    font-size: 50px;
+  }
+
+  .divider {
+    height: 50%;
+  }
+
+  .skills-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .skills-left, .skills-right {
+    flex: 1;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .skills-right {
+    font-size: 28px;
+    padding: 10px 0;
+    position: relative;
+    top: 40px;
+  }
+
+  .item_container {
+    width: 280px;
+    height: 280px;
+    position: relative;
+    left: -20px;
+    top: 20px;
+  }
+  .item_container img{
+    height: 70px;
+    width: 70px;
+  }
+  .about{
+    position: relative;
+    top: -100px;
+  }
+  .contact-sector{
+    position: relative;
+    top: -120px;
+  }
+} */
+@media (min-width: 1440px) {}
